--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ body {
 .hero-container {
 	max-width: 100%;
 	height: 750px;
-	background: url("../images/hero.jpg") no-repeat center center;
+	background: url("../images/heroo.jpg") no-repeat center center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -158,11 +158,13 @@ body {
 	margin-bottom: 30px;
 }
 
-.owner-text {
+.owner-text h4{
 	text-align: justify;
 	padding-right: 50px;
-	color: #584628;
+	color: hsla(38, 38%, 25%, 0.89);
 }
+
+
 
 .experience {
 	margin-top: 50px;
@@ -176,8 +178,9 @@ body {
 	margin-bottom: 50px;
 }
 
-.teacher-training h5,
-.teaching h5 {
+.teacher-training h4,
+.teaching h4 {
+    color: hsla(38, 38%, 25%, 0.89);
 	text-align: center;
 	padding-bottom: 20px;
 	font-weight: 600;
@@ -195,7 +198,7 @@ body {
 	margin-top: 50px;
 }
 
-.yoga-text {
+.yoga-text  {
 	color: hsla(38, 38%, 25%, 0.89);
 	font-size: larger;
 	padding-left: 20px;
@@ -203,6 +206,8 @@ body {
 	margin-top: 20px;
 	text-align: justify;
 }
+
+
 
 .yoga-btn {
 	letter-spacing: 1px;
@@ -760,7 +765,11 @@ h4 {
 		text-align: justify;
 		padding: 25px;
 		color: hsla(38, 38%, 25%, 0.89);
-	}
+    }
+    
+    .owner-text h4 {
+        color: #584628;
+    }
 	.title-text {
 		text-align: center;
 		color: #c4881be3;
@@ -991,7 +1000,11 @@ h4 {
 		justify-items: center;
 		margin-top: 40px;
 		margin-bottom: 50px;
-	}
+    }
+    
+    .btn-class-shaman {
+        margin-top: 30px;
+    }
 	/* -----------------------------------------------Events Page --------------------------------*/
 	.video-position video {
 		width: 70%;
