--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ body {
 
 .about-container {
 	background-color: rgba(195, 136, 27, 0.2);
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	margin-bottom: 50px;
 	height: 300px;
 }
@@ -161,7 +161,7 @@ body {
 .owner-text h4{
 	text-align: justify;
 	padding-right: 50px;
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 }
 
 
@@ -173,14 +173,14 @@ body {
 
 .teacher-training,
 .teaching {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	margin-top: 20px;
 	margin-bottom: 50px;
 }
 
 .teacher-training h4,
 .teaching h4 {
-    color: hsla(38, 38%, 25%, 0.89);
+    color: #584628;
 	text-align: center;
 	padding-bottom: 20px;
 	font-weight: 600;
@@ -199,7 +199,7 @@ body {
 }
 
 .yoga-text  {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	font-size: larger;
 	padding-left: 20px;
 	padding-top: 50px;
@@ -220,7 +220,7 @@ body {
 }
 
 .book-session-text {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	text-align: center;
 	text-transform: uppercase;
 	word-spacing: 4px;
@@ -245,7 +245,7 @@ body {
 }
 
 .newsletter-heading h4 {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 }
 
 .newsletter-input {
@@ -256,7 +256,7 @@ body {
 }
 
 form button {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	background-color: #fafafa;
 	border-radius: 5px;
 	width: 80px;
@@ -349,7 +349,7 @@ footer {
 }
 
 .form-group {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	margin-left: 70px;
 	margin-top: 20px;
 }
@@ -436,132 +436,6 @@ h4 {
 	margin-bottom: 30px;
 }
 
-.row > .column {
-  padding: 0 8px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Create four equal columns that floats next to eachother */
-.column {
-  float: left;
-  width: 25%;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: black;
-}
-
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  width: 90%;
-  max-width: 1200px;
-}
-
-/* The Close Button */
-.close {
-  color: white;
-  position: absolute;
-  top: 10px;
-  right: 25px;
-  font-size: 35px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #999;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* Hide the slides by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Caption text */
-.caption-container {
-  text-align: center;
-  background-color: black;
-  padding: 2px 16px;
-  color: white;
-}
-
-img.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-img.hover-shadow {
-  transition: 0.3s;
-}
-
-.hover-shadow:hover {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
 /* =============================================== What I do Page ================================================= */
 
 .yoga-heading {
@@ -582,7 +456,7 @@ img.hover-shadow {
 }
 
 .methods-text {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	text-align: center;
 	font-size: x-large;
 	margin-top: 50px;
@@ -601,7 +475,7 @@ img.hover-shadow {
 }
 
 .description-text {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	text-align: justify;
 	font-size: larger;
 	margin: 50px 0px 50px 150px;
@@ -734,7 +608,7 @@ img.hover-shadow {
 }
 
 .retreat-text {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	text-align: justify;
 	font-size: large;
 	padding-left: 20px;
@@ -743,7 +617,7 @@ img.hover-shadow {
 }
 
 .retreat-facts h3 {
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	text-align: center;
 }
 
@@ -793,7 +667,7 @@ img.hover-shadow {
 
 .workshop p {
 	text-align: justify;
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 }
 
 .workshop-img {
@@ -816,7 +690,7 @@ img.hover-shadow {
 
 .workshop ul {
 	list-style-type: none;
-	color: hsla(38, 38%, 25%, 0.89);
+	color: #584628;
 	padding: 0px;
 }
 
@@ -889,7 +763,7 @@ img.hover-shadow {
 		justify-items: center;
 		text-align: justify;
 		padding: 25px;
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
     }
     
     .owner-text h4 {
@@ -940,14 +814,14 @@ img.hover-shadow {
 		margin-top: 10px;
 	}
 	.description-text {
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
 		text-align: justify;
 		font-size: larger;
 		margin: 0 auto;
 		padding-top: 30px;
 	}
 	.methods-text {
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
 		text-align: center;
 		font-size: larger;
 		margin-top: 50px;
@@ -1071,7 +945,7 @@ img.hover-shadow {
 		justify-items: center;
 		text-align: justify;
 		padding: 25px;
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
 	}
 	.yoga-img {
 		display: block;
@@ -1103,9 +977,8 @@ img.hover-shadow {
 		margin-left: 0px;
 	}
 	.quote-text {
-		padding: 60px;
-		margin-bottom: 0px;
-		padding-bottom: 0px;
+        padding: 20px 30px 20px 30px;
+        margin-top: 20px;
 	}
 	.description-text {
 		margin: 0 auto;
@@ -1316,7 +1189,7 @@ img.hover-shadow {
 	.owner-text {
 		text-align: justify;
 		padding-right: 50px;
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
 	}
 	.online-session {
 		margin-top: 50px;
@@ -1499,7 +1372,7 @@ img.hover-shadow {
 		margin-top: 50px;
 	}
 	.book-session-text {
-		color: hsla(38, 38%, 25%, 0.89);
+		color: #584628;
 		text-align: center;
 		text-transform: uppercase;
 		word-spacing: 4px;
