Fix text size on index.html owner story section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -761,7 +761,8 @@ h4 {
 	.owner-text {
 		display: flex;
 		justify-items: center;
-		text-align: justify;
+        text-align: justify;
+        font-size: 20px;
 		padding: 25px;
 		color: #584628;
     }
@@ -943,7 +944,8 @@ h4 {
 	.owner-text {
 		display: flex;
 		justify-items: center;
-		text-align: justify;
+        text-align: justify;
+        font-size: 20px;
 		padding: 25px;
 		color: #584628;
 	}
@@ -1070,7 +1072,11 @@ h4 {
 		height: auto;
 		margin-top: 8px;
 		margin-bottom: 30px;
-	}
+    }
+    
+    .owner-text {
+        font-size: 20px;
+    }
 	.online-session {
 		margin-top: 40px;
 		margin-bottom: 40px;
@@ -1187,7 +1193,8 @@ h4 {
 		margin-bottom: 30px;
 	}
 	.owner-text {
-		text-align: justify;
+        text-align: justify;
+        font-size: 20px;
 		padding-right: 50px;
 		color: #584628;
 	}
@@ -1276,7 +1283,10 @@ h4 {
 		padding-bottom: 20px;
 		padding-left: 40px;
 		padding-right: 40px;
-	}
+    }
+    .owner-text {
+        font-size: 20px;
+    }
 	.yoga-text {
 		padding-top: 50px;
 		margin-top: 20px;
@@ -1359,7 +1369,10 @@ h4 {
 		padding-bottom: 20px;
 		padding-left: 40px;
 		padding-right: 40px;
-	}
+    }
+    .owner-text {
+        font-size: 20px;
+    }
 	.yoga-text {
 		padding-top: 50px;
 		margin-top: 20px;
